--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
     <script src="ts/main.ts" defer type="module"></script>
   </head>
   <body>
+    <input type="text" id="text-input" /><button id="input-btn">input</button>
+    <div id="result"></div>
     <form id="newTodoForm">
       <div>
         <input type="text" id="newTodoText" />
